--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,10 @@
     "paper-input": "PolymerElements/paper-input#^2.0.0",
     "paper-date-picker": "bendavis78/paper-date-picker#^1.2.0",
     "vaadin-date-picker": "vaadin/vaadin-date-picker#^1.2.3",
-    "sugar": "^2.0.4"
+    "sugar": "^2.0.4",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
